corrected bug in css alignment in filtro general

--- a/FrontEnd/laika_web/src/Components/Consulta/Subcomponentes/Filtros/SubFiltros/Styles/SubFiltros.css
+++ b/FrontEnd/laika_web/src/Components/Consulta/Subcomponentes/Filtros/SubFiltros/Styles/SubFiltros.css
@@ -5,7 +5,7 @@
 .nombreFiltro {
     grid-row: 1;
     font-family: "Raleway";
-    font-size: 16px;
+    font-size: 1.2em;
     padding: .75vh 0;
 
 }
